# M

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  QUICKSTART.md  README.md  backtest_results.json  demo_backtest_report.html  docker-compose.yml  download_data.py  download_data_linux.py  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: base.yaml  dashboard.yaml  data.yaml  execution.yaml  model.yaml  production.yaml  risk.yaml  staging.yaml  symbols.yaml  training.yaml
configs/colab/: base.yaml  data.yaml  execution.yaml  model.yaml  training.yaml
docs/: project_overview.html
models/: ._best
notebooks/: train_colab.ipynb
scripts/: analyze_features.py  backtest.py  collect_data.py  collect_data_oanda.py  download_calendar.py  download_data.py  download_mt5_data.py  fetch_all_data.py  hyperopt_sac.py  launch_dashboard.py  live_trade.py  paper_trade.py  pretrain_tft.py  quick_backtest.py  stress_test.py  sync_checkpoints.py  train.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py  test_signal_risk_execute.py
tests/unit/: test_adaptive_selector.py  test_alerts.py  test_backtest.py  test_config_loader.py  test_cooldown.py  test_decision_logger.py  test_dim_reducer.py  test_drawdown_monitor.py  test_execution.py  test_gpu_utils.py  test_health_check.py  test_hedge_fund_features.py  test_importance_tracker.py  test_intermarket_var.py  test_model_registry.py  test_news_fetcher.py  test_news_filter.py  test_phase2.py  test_phase3.py  test_phase3_5.py  test_phase4.py  test_phase5_intermarket.py  test_phase7_advanced.py  test_realtime_news.py  test_risk_manager.py  (+4 more)
(+141 files in other folders)
