[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apexfx-quantum"
version = "0.1.0"
description = "Hedge-fund grade algorithmic Forex trading system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "torch>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "PyWavelets>=1.4",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]
oanda = ["requests>=2.31"]
yahoo = ["yfinance>=0.2"]
mlflow = ["mlflow>=2.9"]
dashboard = [
    "plotly>=5.18",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.7",
    "optuna>=3.4",
    "tensorboard>=2.15",
    "mlflow>=2.9",
]
all = ["apexfx-quantum[mt5,oanda,yahoo,mlflow,dashboard,dev]"]

[project.scripts]
apexfx-train = "scripts.train:main"
apexfx-live = "scripts.live_trade:main"
apexfx-dashboard = "scripts.launch_dashboard:main"
apexfx-collect = "scripts.collect_data:main"
apexfx-backtest = "scripts.backtest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apexfx"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
